@@ -1,3 +1,9 @@
+2007-04-12  Katsutoshi Itoh <cut-sea@kahua.org>
+
+	* Fix: src/kahua/server.scm
+	  bug fix for kahua-cookie-ref at the case that
+	  retuan #f from (kahua-meta-ref "HTTP_COOKIE").
+
 2007-04-11  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Fix: src/kahua/server.scm
